client/src/app/sudoku/sudoku.component.scss
.sudoku-container {
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: auto;
  width: 95%;
  padding: 20px;
}

.user-message {
  text-align: center;
  font-size: 18px;
  font-weight: bold;
  padding: 10px;
  color: #333;
}

/* Controls Container */
.controls-container {
  display: flex;
  justify-content: center;
  gap: 10px;
  margin-top: 20px;
  align-items: center;
}

/* Buttons */
button {
  background-color: #4CAF50;
  color: white;
  border: none;
  padding: 10px 20px;
  font-size: 16px;
  cursor: pointer;
  border-radius: 8px;
  transition: background-color 0.3s ease, transform 0.2s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  width: 200px;
}

button:hover {
  background-color: #45a049;
  transform: translateY(-2px);
}

button:active {
  background-color: #388e3c;
  transform: translateY(0);
}

button:disabled {
  background-color: #d3d3d3;
  cursor: not-allowed;
  box-shadow: none;
}

/* Difficulty Selector */
select {
  background-color: #4CAF50;
  color: white;
  border: none;
  padding: 10px;
  font-size: 16px;
  border-radius: 8px;
  cursor: pointer;
  transition: background-color 0.3s ease, transform 0.2s ease;
  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
  width: 200px;
  text-align: center;
  outline: none;
}

select:hover {
  background-color: #45a049;
  transform: translateY(-2px);
}

select:active {
  background-color: #388e3c;
  transform: translateY(0);
}

@media (min-width: 768px) {
  button {
    white-space: nowrap;
  }
}

@media (max-width: 767px) {
  .sudoku-container {
    padding: 10px;
    align-items: center;
  }

  .user-message {
    font-size: 16px;
    padding: 8px;
  }

  .controls-container {
    display: flex;
    flex-wrap: wrap;
    gap: 10px;
    justify-content: center;
  }

  button, select {
    width: calc(45%);
    font-size: 14px;
    padding: 8px 10px;
  }
}

@media (max-width: 480px) {
  .sudoku-container {
    padding: 5px;
  }

  .user-message {
    font-size: 14px;
  }

  .controls-container {
    display: flex;
    flex-wrap: wrap;
    gap: 8px;
    justify-content: center;
  }

  button, select {
    width: calc(45%);
    font-size: 12px;
    padding: 6px 8px;
  }
}

